# discower_asim

./: README.md
discower/: CMakeLists.txt
discower/launch/: sim.launch.py  spawn.launch.py
discower/launch/controller/: descriptions.launch.py  sim_start.launch.py  synthetic.launch.py
discower_cosmo/: CMakeLists.txt
discower_cosmo/urdf/: model.urdf
discower_cosmo/worlds/: discower.world
discower_description/urdf/: model.urdf.xacro  model_sitl.urdf.xacro  model_thrusters.urdf.xacro  model_thrusters_gz.urdf.xacro
discower_gazebo/: CMakeLists.txt  package.xml
discower_gazebo/launch/: px4.launch.py  start_simulation.launch.py
discower_gazebo/src/: vehicle_mocap_fake.py  vehicle_mocap_odom.py
discower_gazebo/src/gazebo_model_plugin_thrusters/: gazebo_model_plugin_thrusters.cc
discower_platforms/: CMakeLists.txt
